src/objects/Knowledge_Contact_Settings__c.object
<CustomObject>
    <description>Settings to define which contact channels are available per knowledge sub-category</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authentication_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authentication Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Callback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows user to request a callback from Contact Centre</description>
        <label>Callback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Sub_Topic__c</fullName>
        <description>The second level of article categorisation in the Knowledge Base</description>
        <label>Knowledge Sub-Topic</label>
        <picklist>
            <controllingField>Knowledge_Topic__c</controllingField>
            <picklistValues>
                <fullName>About BBC Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signing Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBC iPlayer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBC Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Programmes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage Your Details</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refunds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forgotten Email Address, Password or PIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>About BBC iD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close Your Store Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Suspicious Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Stolen Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Missing in My Programmes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buying Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watching Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating and Reviewing Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacting Us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cookies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Streaming Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Browsers/Operating Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Device Isn&apos;t Supported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPlayer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Knowledge_Topic__c</fullName>
        <description>The first tier under which articles are grouped in the Knowledge Base</description>
        <label>Knowledge Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Getting Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage Your Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Using the Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing, Vouchers and Promotions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LiveChat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LiveChat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The geographical areas that knowledge articles are tagged by</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>UK</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Zealand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webform__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webform</label>
        <type>Checkbox</type>
    </fields>
    <label>Knowledge Contact Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Knowledge_Topic__c</columns>
        <columns>Knowledge_Sub_Topic__c</columns>
        <columns>Active__c</columns>
        <columns>Region__c</columns>
        <columns>Webform__c</columns>
        <columns>Callback__c</columns>
        <columns>LiveChat__c</columns>
        <columns>Community__c</columns>
        <columns>Authentication_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KCS-{00000}</displayFormat>
        <label>Knowledge Contact Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Contact Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Active_Contact_Channel_Selected</fullName>
        <active>true</active>
        <description>If active is checked, at least one of the three contact channels also needs to be checked</description>
        <errorConditionFormula>AND( Active__c = TRUE, 
     AND( Community__c = FALSE,
           LiveChat__c = FALSE,
           Webform__c = FALSE
         )
    )</errorConditionFormula>
        <errorMessage>You have marked Knowledge Contact Settings as active. Please select a contact channel.</errorMessage>
    </validationRules>
</CustomObject>